--- a/APFTestingUI/Views/Candidate/CreatePilot.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePilot.cshtml
@@ -9,6 +9,7 @@
 }
 
 <h2>Create Pilot</h2>
+<p>Please fill in the fields below to create a new Pilot Candidate.<br />Astericks (*) are placed next to required fields.</p>
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(false)
@@ -17,36 +18,42 @@
         <legend>Create</legend>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.FirstName)
+            @Html.LabelFor(model => model.FirstName) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.FirstName)
             @*@Html.ValidationMessageFor(model => model.FirstName)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.LastName)
+            @Html.LabelFor(model => model.LastName) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.LastName)
             @*@Html.ValidationMessageFor(model => model.LastName)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.DateOfBirth)
+            @Html.LabelFor(model => model.DateOfBirth) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.DateOfBirth, new { @class = "datepicker" })
             @*@Html.ValidationMessageFor(model => model.DateOfBirth)*@
+            <br />
+            <small>Format: (dd/mm/yyyy)</small>
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Address1)
+            @Html.LabelFor(model => model.Address1) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Address1)
             @*@Html.ValidationMessageFor(model => model.Address1)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Address2)
@@ -55,30 +62,34 @@
             @Html.EditorFor(model => model.Address2)
             @*@Html.ValidationMessageFor(model => model.Address2)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Suburb)
+            @Html.LabelFor(model => model.Suburb) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Suburb)
             @*@Html.ValidationMessageFor(model => model.Suburb)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Postcode)
+            @Html.LabelFor(model => model.Postcode) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Postcode)
             @*@Html.ValidationMessageFor(model => model.Postcode)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.ARN)
+            @Html.LabelFor(model => model.ARN) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.ARN)
             @*@Html.ValidationMessageFor(model => model.ARN)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Phone)
@@ -87,6 +98,7 @@
             @Html.EditorFor(model => model.Phone)
             @*@Html.ValidationMessageFor(model => model.Phone)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Mobile)
@@ -95,59 +107,69 @@
             @Html.EditorFor(model => model.Mobile)
             @*@Html.ValidationMessageFor(model => model.Mobile)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Email)
+            @Html.LabelFor(model => model.Email) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Email)
             @*@Html.ValidationMessageFor(model => model.Email)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.PilotLicenceType)
+            @Html.LabelFor(model => model.PilotLicenceType) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.DropDownListFor(model => model.PilotLicenceType, Model.PilotLicences, "--Select--")
             @*@Html.ValidationMessageFor(model => model.PilotLicenceType)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.InstrumentRating)
+            @Html.LabelFor(model => model.InstrumentRating) <em>*</em>
         </div>
         <div class="editor-field">
-            @Html.RadioButtonFor(model => model.InstrumentRating, true) YES <br />
-            @Html.RadioButtonFor(model => model.InstrumentRating, false) NO
+            @Html.RadioButtonFor(model => model.InstrumentRating, true, new { id = "instrument-rating-true" }) <label for="instrument-rating-true">Yes</label><br />
+            @Html.RadioButtonFor(model => model.InstrumentRating, false, new { id = "instrument-rating-false" }) <label for="instrument-rating-false">No</label>
             @*@Html.ValidationMessageFor(model => model.InstrumentRating)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.PilotMedical)
+            @Html.LabelFor(model => model.PilotMedical) <em>*</em>
         </div>
         <div class="editor-field">
-            @Html.RadioButtonFor(model => model.PilotMedical, 1) Class One <br />
-            @Html.RadioButtonFor(model => model.PilotMedical, 2) Class Two
+            @Html.RadioButtonFor(model => model.PilotMedical, 1, new { id = "pilot-medical-class-1" }) <label for="pilot-medical-class-1">Class One</label><br />
+            @Html.RadioButtonFor(model => model.PilotMedical, 2, new { id = "pilot-medical-class-2" }) <label for="pilot-medical-class-2">Class Two</label>
             @*@Html.ValidationMessageFor(model => model.PilotMedical)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.PilotMedicalExpiry)
+            @Html.LabelFor(model => model.PilotMedicalExpiry)<em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.PilotMedicalExpiry)
             @*@Html.ValidationMessageFor(model => model.PilotMedicalExpiry)*@
+            <br />
+            <small>Format: (dd/mm/yyyy)</small>
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.ValidBFR)
+            @Html.LabelFor(model => model.ValidBFR) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.CheckBoxFor(model => model.ValidBFR)
             @*@Html.ValidationMessageFor(model => model.ValidBFR)*@
         </div>
+        <div class="clear"></div>
 
-        <p>
-            <input type="submit" value="Create" />
+        <p class="button-container">
+            <input type="reset" value="Reset" class="form-reset" />
+            <input type="submit" value="Create" class="form-submit" />
         </p>
     </fieldset>
 }
