--- a/APFTestingUI/Views/Candidate/CreatePacker.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePacker.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Create Packer</h2>
-
+<p>Please fill in the fields below to create a new Packer Candidate.<br />Astericks (*) are placed next to required fields.</p>
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(false)
 
@@ -13,39 +13,44 @@
         <legend>Create Packer</legend>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.FirstName)
+            @Html.LabelFor(model => model.FirstName) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.FirstName)
             @*@Html.ValidationMessageFor(model => model.FirstName)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.LastName)
+            @Html.LabelFor(model => model.LastName) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.LastName)
             @*@Html.ValidationMessageFor(model => model.LastName)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Mobile)
+            @Html.LabelFor(model => model.Mobile) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Mobile)
             @*@Html.ValidationMessageFor(model => model.Mobile)*@
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.APFNumber)
+            @Html.LabelFor(model => model.APFNumber) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.APFNumber)
             @*@Html.ValidationMessageFor(model => model.APFNumber)*@
         </div>
+        <div class="clear"></div>
 
-        <p>
-            <input type="submit" value="Create" />
+        <p class="button-container">
+            <input type="reset" value="Reset" class="form-reset" />
+            <input type="submit" value="Create" class="form-submit" />
         </p>
     </fieldset>
 }
