--- a/APFTestingUI/Views/Candidate/EditPacker.cshtml
+++ b/APFTestingUI/Views/Candidate/EditPacker.cshtml
@@ -13,7 +13,7 @@
         <legend>Edit Packer</legend>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.FirstName)
+            @Html.LabelFor(model => model.FirstName) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.FirstName)
@@ -21,7 +21,7 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.LastName)
+            @Html.LabelFor(model => model.LastName) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.LastName)
@@ -29,7 +29,7 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Mobile)
+            @Html.LabelFor(model => model.Mobile) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Mobile)
@@ -37,15 +37,15 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.APFNumber)
+            @Html.LabelFor(model => model.APFNumber) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.APFNumber)
             @*@Html.ValidationMessageFor(model => model.APFNumber)*@
         </div>
 
-        <p>
-            <input type="submit" value="Save" />
+        <p class="button-container">
+            <input type="submit" value="Save" class="button-submit" />
         </p>
     </fieldset>
 }
