--- a/APFTestingUI/Views/Shared/_Layout.cshtml
+++ b/APFTestingUI/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <!--[if lt IE 9]>
     @Scripts.Render("~/Scripts/html5shiv.js")
     <![endif]-->
-    @Scripts.Render("~/Scripts/modernizr.custom.51211.js")
+   @* @Scripts.Render("~/Scripts/modernizr.custom.51211.js")*@
 </head>
 <body>
     <div id="global-wrapper">
