Created Pilot Practical results summary view

--- a/APFTestingUI/Views/Practical/PilotInput.cshtml
+++ b/APFTestingUI/Views/Practical/PilotInput.cshtml
@@ -9,6 +9,7 @@
 @using (Html.BeginForm())
 {
     @Html.HiddenFor(model => model.CandidateId)
+    @Html.HiddenFor(model => model.ExamId)
     <table>
         <thead>
             <tr>
