finalised all UI connections to Facade for practical component. Added DeleteCandidate to Facade

--- a/APFTestingUI/Views/Candidate/CreatePacker.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePacker.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Create Packer</h2>
-<p>Please fill in the fields below to create a new Packer Candidate.<br />Astericks (*) are placed next to required fields.</p>
+<p>Please fill in the fields below to create a new Packer Candidate.<br />Asterisks (*) are placed next to required fields.</p>
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(false)
 
