--- a/APFTestingUI/Views/Practical/PackerEdit.cshtml
+++ b/APFTestingUI/Views/Practical/PackerEdit.cshtml
@@ -13,7 +13,7 @@
         <legend>PackerEdit</legend>
 
         @Html.HiddenFor(model => model.ExamId)
-        @Html.HiddenFor(model => model.PackId)
+        @Html.HiddenFor(model => model.TaskId)
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Date)
