--- a/APFTestingUI/Views/Practical/PilotView.cshtml
+++ b/APFTestingUI/Views/Practical/PilotView.cshtml
@@ -36,5 +36,5 @@
 </table>
 <p>
     @Html.ActionLink("Edit", "PilotInput", new { examId = Model.ExamId, candidateId = Model.CandidateId }, new { @class = "examinerButton" })
-    @Html.ActionLink("Submit", "PilotSubmit", new { examId = Model.ExamId }, new { @class = "examinerButton" })
+    @Html.ActionLink("Submit", "FinalisePractical", new { examId = Model.ExamId }, new { @class = "examinerButton" })
 </p>
