--- a/APFTestingUI/Views/Candidate/CreatePilot.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePilot.cshtml
@@ -9,7 +9,7 @@
 }
 
 <h2>Create Pilot</h2>
-<p>Please fill in the fields below to create a new Pilot Candidate.<br />Astericks (*) are placed next to required fields.</p>
+<p>Please fill in the fields below to create a new Pilot Candidate.<br />Asterisks (*) are placed next to required fields.</p>
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(false)
