--- a/APFTestingUI/Views/Practical/PackerInput.cshtml
+++ b/APFTestingUI/Views/Practical/PackerInput.cshtml
@@ -4,9 +4,14 @@
     ViewBag.Title = "Packer Input";
 }
 
+@section styles {
+    @Styles.Render("~/Content/themes/base/css")
+}
+
 <h2>Packer Input</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm("PackerInput", "Practical", FormMethod.Post, new { id = "form-packer-input" }))
+{
     @Html.ValidationSummary(false)
 
     <fieldset>
@@ -21,6 +26,7 @@
             @Html.EditorFor(model => model.Date)
             @Html.ValidationMessageFor(model => model.Date)
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.CanopyType)
@@ -29,6 +35,7 @@
             @Html.DropDownListFor(model => model.CanopyType, Model.CanopyTypeList, "--Select--")
             @Html.ValidationMessageFor(model => model.CanopyType)
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.CanopyTypeOther)
@@ -37,6 +44,7 @@
             @Html.EditorFor(model => model.CanopyTypeOther)
             @Html.ValidationMessageFor(model => model.CanopyTypeOther)
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.CanopyTypeSerialNumber)
@@ -45,6 +53,7 @@
             @Html.EditorFor(model => model.CanopyTypeSerialNumber)
             @Html.ValidationMessageFor(model => model.CanopyTypeSerialNumber)
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.HarnessContainerType)
@@ -53,6 +62,7 @@
             @Html.DropDownListFor(model => model.HarnessContainerType, Model.HarnessContainerTypeList, "--Select--")
             @Html.ValidationMessageFor(model => model.HarnessContainerType)
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.HarnessContainerTypeOther)
@@ -61,6 +71,7 @@
             @Html.EditorFor(model => model.HarnessContainerTypeOther)
             @Html.ValidationMessageFor(model => model.HarnessContainerTypeOther)
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.HarnessContainerSerialNumber)
@@ -69,6 +80,7 @@
             @Html.EditorFor(model => model.HarnessContainerSerialNumber)
             @Html.ValidationMessageFor(model => model.HarnessContainerSerialNumber)
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Note)
@@ -77,6 +89,7 @@
             @Html.EditorFor(model => model.Note)
             @Html.ValidationMessageFor(model => model.Note)
         </div>
+        <div class="clear"></div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.SupervisorId)
@@ -85,9 +98,10 @@
             @Html.EditorFor(model => model.SupervisorId)
             @Html.ValidationMessageFor(model => model.SupervisorId)
         </div>
+        <div class="clear"></div>
 
-        <p>
-            <input type="submit" value="Create" />
+        <p class="button-container">
+            <input type="submit" value="Create" class="examinerButton" />
         </p>
     </fieldset>
 }
@@ -95,4 +109,7 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryui")
+    @Scripts.Render("~/Scripts/practical-packer.js")
+
 }
